# DoNotes

./: .gitignore  CMakeLists.txt  README.md
src/: app.cc
src/ui/: MainWindow.cc  MainWindow.h
